--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="navbar-brand">
           <h3 class="d-block d-lg-none text-primary">PORTFOLIO</h3>
           <span class="d-none d-lg-block">
-            <img class="img-fluid img-profile rounded-circle mx-auto mb-2 img-zoomable" src="" alt="avatar" title="Click to zoom image.">
+            <img class="img-fluid img-profile rounded-circle mx-auto mb-2 img-zoomable" src="./assets/img/avatar.png" alt="avatar" title="Click to zoom image.">
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
