--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Portfolio</title>
-      <link rel="shortcut icon" type="image/x-icon" href="" />
+      <link rel="shortcut icon" type="image/x-icon" href="./assets/img/icon-web.png" />
       <link
          rel="stylesheet"
          href="assets/library/bootstrap/css/bootstrap.min.css"
@@ -112,6 +112,44 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-4">
               <div class="resume-content mr-auto">
                 <h3 class="mb-1">
+                  <a href=" https://todo-list-gray-tau.vercel.app/" target="_blank">
+                    Todo list
+                  </a>
+                </h3>
+                <div class="mb-0">
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Mô tả dự án: <strong>Thiết kế chức năng ghi lại danh sách công việc</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Số lượng thành viên: <strong>1</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Vai trò: <strong>Thiết kế UI/UX, Chức năng</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Kỹ năng: <strong>VUEJS, BOOTSTRAP</strong><br>
+                </div>
+              </div>
+            </div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-4">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-1">
+                  <a href="https://app-music-black.vercel.app" target="_blank">
+                    App Music
+                  </a>
+                </h3>
+                <div class="mb-0">
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Mô tả dự án: <strong>Thiết kế các chức năng của một ứng dụng phát nhạc</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Số lượng thành viên: <strong>1</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Vai trò: <strong>Thiết kế UI/UX, Chức năng</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Kỹ năng: <strong>HTML, CSS, JS</strong><br>
+                </div>
+              </div>
+            </div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-4">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-1">
                   <a href="https://app-shoppe.vercel.app/" target="_blank">
                     Shoppe
                   </a>
@@ -119,44 +157,6 @@
                 <div class="mb-0">
                   <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
                   Mô tả dự án: <strong>Cắt giao diện lại từ trang website Shopee</strong><br>
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Số lượng thành viên: <strong>1</strong><br>
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Vai trò: <strong>Thiết kế UI/UX</strong><br>
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Kỹ năng: <strong>HTML, CSS</strong><br>
-                </div>
-              </div>
-            </div>
-            <div class="resume-item d-flex flex-column flex-md-row mb-4">
-              <div class="resume-content mr-auto">
-                <h3 class="mb-1">
-                  <a href="https://anonime-nine.vercel.app/" target="_blank">
-                    Anonime
-                  </a>
-                </h3>
-                <div class="mb-0">
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Mô tả dự án: <strong>Cắt giao diện template landing-page từ figma</strong><br>
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Số lượng thành viên: <strong>1</strong><br>
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Vai trò: <strong>Thiết kế UI/UX</strong><br>
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Kỹ năng: <strong>HTML, CSS</strong><br>
-                </div>
-              </div>
-            </div>
-            <div class="resume-item d-flex flex-column flex-md-row mb-4">
-              <div class="resume-content mr-auto">
-                <h3 class="mb-1">
-                  <a href="https://photofox.vercel.app/" target="_blank">
-                    Photofox
-                  </a>
-                </h3>
-                <div class="mb-0">
-                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Mô tả dự án: <strong>Cắt giao diện template landing-page từ figma</strong><br>
                   <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
                   Số lượng thành viên: <strong>1</strong><br>
                   <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
@@ -181,7 +181,7 @@
                   <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
                   Vai trò: <strong>Thiết kế UI/UX</strong><br>
                   <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
-                  Kỹ năng: <strong>HTML, CSS, Jquery</strong><br>
+                  Kỹ năng: <strong>HTML, CSS, JQUERY</strong><br>
                 </div>
               </div>
             </div>
@@ -212,28 +212,16 @@
                 <i class="devicon-react-original colored" title="ReactJS"></i>
               </li>
               <li class="list-inline-item">
-                <i class="devicon-nodejs-plain colored" title="NodeJS"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="devicon-mongodb-plain colored" title="MongoDB"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="devicon-mysql-plain colored" title="MySQL"></i>
+                <i class="fab fa-vuejs" title="VueJS"></i>
               </li>
               <li class="list-inline-item">
                 <i class="devicon-github-plain colored" title="GitHub"></i>
               </li>
               <li class="list-inline-item">
-                <i class="devicon-jquery-plain-wordmark colored" title="Jquery"></i>
-              </li>
-              <li class="list-inline-item">
                 <i class="devicon-bootstrap-plain-wordmark colored" title="Bootstrap"></i>
               </li>
               <li class="list-inline-item">
-                <i class="devicon-babel-plain colored" title="Babel"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="fab fa-npm" title="NPM"></i>
+                <i class="devicon-jquery-plain-wordmark colored" title="Jquery"></i>
               </li>
             </ul>
   
