edit again about

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
               <strong><i class="devicon-react-original"></i> Front-End:</strong>
               I am experienced in <strong>Javascript on ReactJS Framework.</strong>
             </p>
-            <p class="lead mb-4">
+            <!-- <p class="lead mb-4">
               <strong><i class="devicon-nodejs-plain"></i> Back-End:</strong>
               I am experienced in <strong>Javascript, TypeScript, Express, MongoDB.</strong> on 
               <strong>Node.JS</strong> platform.
-            </p>
+            </p> -->
           </p>
             <div class="social-icons">
               <!-- <a target="blank" href="">
