edit again about second time

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="lead mb-4"></p>
             <p class="lead mb-2">
               <strong><i class="devicon-react-original"></i> Front-End:</strong>
-              I am experienced in <strong>Javascript on ReactJS Framework.</strong>
+              I am experienced in <strong>Javascript on ReactJS and VueJS Framework.</strong>
             </p>
             <!-- <p class="lead mb-4">
               <strong><i class="devicon-nodejs-plain"></i> Back-End:</strong>
