--- a/index.html
+++ b/index.html
@@ -113,6 +113,25 @@
               <div class="resume-content mr-auto">
                 <h3 class="mb-1">
                   <a href=" https://todo-list-gray-tau.vercel.app/" target="_blank">
+                    Template Langing Page
+                  </a>
+                </h3>
+                <div class="mb-0">
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Mô tả dự án: <strong>Cắt giao diện từ figma</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Số lượng thành viên: <strong>1</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Vai trò: <strong>Thiết kế UI/UX</strong><br>
+                  <i class="fa-custom-list fa fa-bookmark text-warning"></i>&nbsp;
+                  Kỹ năng: <strong>VUEJS</strong><br>
+                </div>
+              </div>
+            </div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-4">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-1">
+                  <a href=" https://todo-list-gray-tau.vercel.app/" target="_blank">
                     Todo list
                   </a>
                 </h3>
