--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-4">
               <div class="resume-content mr-auto">
                 <h3 class="mb-1">
-                  <a href=" https://todo-list-gray-tau.vercel.app/" target="_blank">
+                  <a href="https://template-landingpage-hydra.vercel.app/" target="_blank">
                     Template Langing Page
                   </a>
                 </h3>
